# CMakeList.txt : CMake project for TrustPass, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (TrustPass "TrustPass.cpp" "TrustPass.h" "DataStore.cpp" )

# TODO: Add tests and install targets if needed.
